added styles. finished main view. added SSL support. restructured classes. added vaadin session timeout.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 target
-*.class
 lib
 .idea
 *.iml
+.DS_Store
+.classpath
+.project
+**/styles.scss.cache
+**/styles.css
+**/*.log*
+**/widgetsets/**/*
