--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 app.name=WOL proxy
 users.file=config/users.xml
 hosts.file=config/hosts.xml
+
+spring.output.ansi.enabled=ALWAYS
+
+server.session.persistent=false
+server.port=8443
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=wolproxy
+
+logging.file=app.log
+
+vaadin.servlet.close-idle-sessions=true
+vaadin.servlet.production-mode=@production.mode@
