--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <vaadin.version>7.6.6</vaadin.version>
+
+        <!-- indicator for release builds or debug mode -->
+        <production.mode>false</production.mode>
     </properties>
 
     <dependencies>
@@ -77,6 +80,8 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <!-- enable Maven properties substitution -->
+                    <addResources>false</addResources>
                 </configuration>
             </plugin>
 
