bugfix: added key store type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ server.session.persistent=false
 server.port=8443
 server.ssl.key-store=classpath:keystore.jks
 server.ssl.key-store-password=wolproxy
+server.ssl.key-store-type = PKCS12
 
 logging.file=app.log
 
